plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'for.job'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}



configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// ⭐ 네이버/카카오 등 외부 OAuth2 로그인을 위한 핵심 의존성 추가 ⭐
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// kakao 로그인 의존성 추가
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// JJWT API: JWT 인터페이스 (Claims, Jwts 등)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	// JJWT IMPL: JWT 구현체 (토큰 생성/파싱 로직)
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	// JJWT Jackson: JSON 처리를 위한 Jackson 연동
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Springdoc OpenAPI(Swagger UI)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
}

tasks.named('test') {
	useJUnitPlatform()
}


